Add some basic swagger spec
