# go/model_container_info.go
@@ -6,18 +6,13 @@
  * API version: 1.0.0
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
-package main
+package swagger
 
-import (
-	sw "backend/go"
-	"log"
-	"net/http"
-)
+type ContainerInfo struct {
 
-func main() {
-	log.Printf("Server started")
+	Ip string `json:"ip"`
 
-	router := sw.NewRouter()
+	LastPing int32 `json:"lastPing,omitempty"`
 
-	log.Fatal(http.ListenAndServe(":8080", router))
+	LastSuccess int32 `json:"lastSuccess,omitempty"`
 }
