# go/model_container_info_field.go
@@ -6,18 +6,13 @@
  * API version: 1.0.0
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
-package main
+package swagger
 
-import (
-	sw "backend/go"
-	"log"
-	"net/http"
+type ContainerInfoField string
+
+// List of ContainerInfoField
+const (
+	IP ContainerInfoField = "ip"
+	LAST_PING ContainerInfoField = "lastPing"
+	LAST_SUCCESS ContainerInfoField = "lastSuccess"
 )
-
-func main() {
-	log.Printf("Server started")
-
-	router := sw.NewRouter()
-
-	log.Fatal(http.ListenAndServe(":8080", router))
-}
