# go/model_container_ping_result.go
@@ -6,18 +6,13 @@
  * API version: 1.0.0
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
-package main
+package swagger
 
-import (
-	sw "backend/go"
-	"log"
-	"net/http"
-)
+type ContainerPingResult struct {
 
-func main() {
-	log.Printf("Server started")
+	Ip string `json:"ip,omitempty"`
 
-	router := sw.NewRouter()
+	LastPing int32 `json:"lastPing,omitempty"`
 
-	log.Fatal(http.ListenAndServe(":8080", router))
+	Success bool `json:"success,omitempty"`
 }
