# go/model_sort_order.go
@@ -6,18 +6,12 @@
  * API version: 1.0.0
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
-package main
+package swagger
 
-import (
-	sw "backend/go"
-	"log"
-	"net/http"
+type SortOrder string
+
+// List of SortOrder
+const (
+	ASC SortOrder = "asc"
+	DESC SortOrder = "desc"
 )
-
-func main() {
-	log.Printf("Server started")
-
-	router := sw.NewRouter()
-
-	log.Fatal(http.ListenAndServe(":8080", router))
-}
